[gd_scene load_steps=10 format=3 uid="uid://d01j1od6jibb1"]

[ext_resource type="Script" path="res://Scripts/PopupPanel2.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b5vmf24bw0nkg" path="res://Textures/Blocks/emerald_block.png" id="2"]
[ext_resource type="Script" path="res://Scripts/Buttons.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://cepojggdt3qd6" path="res://Textures/Icons/change_icon.png" id="4"]
[ext_resource type="Theme" uid="uid://b7mjswntukbu2" path="res://Themes/black_and_white_theme.tres" id="5"]
[ext_resource type="Script" path="res://Scripts/WorldsCreationMenu.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://co4qjeoiase5d" path="res://Textures/Blocks/dirt.png" id="14"]

[sub_resource type="FontFile" id="1"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([SubResource("1")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WorldsCreationMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 712.0
script = ExtResource("7")

[node name="TextureRect" type="TextureRect" parent="WorldsCreationMenu"]
layout_mode = 0
offset_top = -1.0
offset_right = 1280.0
offset_bottom = 744.0
texture = ExtResource("14")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="WorldsCreationMenu"]
self_modulate = Color(0.505882, 0.505882, 0.505882, 1)
layout_mode = 0
offset_top = 320.0
offset_right = 1280.0
offset_bottom = 744.0
texture = ExtResource("14")
stretch_mode = 1

[node name="Back" type="Button" parent="WorldsCreationMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 37.0
script = ExtResource("3")

[node name="Label" type="Label" parent="WorldsCreationMenu/Back"]
texture_filter = 1
layout_mode = 0
offset_top = -1.0
offset_right = 60.0
offset_bottom = 14.0
scale = Vector2(2, 2)
size_flags_horizontal = 3
size_flags_vertical = 7
mouse_filter = 1
text = "menu_back"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Line2D" type="Line2D" parent="WorldsCreationMenu"]
position = Vector2(0, 1)
points = PackedVector2Array(384, 88, 896, 88)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="Line2D2" type="Line2D" parent="WorldsCreationMenu"]
position = Vector2(0, 233)
points = PackedVector2Array(384, 88, 896, 88)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="CreateWorld" type="Button" parent="WorldsCreationMenu"]
layout_mode = 0
offset_left = 448.0
offset_top = 673.0
offset_right = 832.0
offset_bottom = 712.0
focus_mode = 0
theme_override_fonts/font = SubResource("2")
script = ExtResource("3")

[node name="Label" type="Label" parent="WorldsCreationMenu/CreateWorld"]
texture_filter = 1
layout_mode = 0
anchor_top = -0.025641
anchor_bottom = -0.025641
offset_right = 192.0
offset_bottom = 20.0
scale = Vector2(2, 2)
size_flags_horizontal = 3
size_flags_vertical = 7
mouse_filter = 1
text = "menu_createworld_button"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Label_Name" type="Label" parent="WorldsCreationMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 376.0
offset_top = 141.0
offset_right = 534.0
offset_bottom = 152.0
scale = Vector2(2, 2)
theme = ExtResource("5")
theme_override_colors/font_shadow_color = Color(0.196078, 0.196078, 0.196078, 1)
text = "menu_createworld_name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit_Name" type="LineEdit" parent="WorldsCreationMenu/Label_Name"]
layout_mode = 0
offset_left = 12.0
offset_top = 13.0
offset_right = 264.0
offset_bottom = 27.0
size_flags_horizontal = 5
theme = ExtResource("5")
placeholder_text = "menu_createworld_name_placeholder"
caret_blink = true
caret_blink_interval = 1.0

[node name="Label_Partymode" type="Label" parent="WorldsCreationMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 376.0
offset_top = 236.0
offset_right = 571.0
offset_bottom = 248.0
scale = Vector2(2, 2)
theme = ExtResource("5")
theme_override_colors/font_shadow_color = Color(0.196078, 0.196078, 0.196078, 1)
text = "menu_createworld_partymode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChoosePartymode" type="OptionButton" parent="WorldsCreationMenu/Label_Partymode"]
layout_mode = 0
offset_left = 12.0
offset_top = 14.0
offset_right = 264.0
offset_bottom = 28.5
focus_mode = 0
theme = ExtResource("5")

[node name="Description" type="Label" parent="WorldsCreationMenu/Label_Partymode"]
texture_filter = 1
layout_mode = 0
offset_left = -184.0
offset_top = 31.0
offset_right = 1088.0
offset_bottom = 56.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Seed" type="Label" parent="WorldsCreationMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 376.0
offset_top = 363.0
offset_right = 534.0
offset_bottom = 374.0
scale = Vector2(2, 2)
theme = ExtResource("5")
theme_override_colors/font_shadow_color = Color(0.196078, 0.196078, 0.196078, 1)
text = "menu_createworld_seed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit_Seed" type="LineEdit" parent="WorldsCreationMenu/Label_Seed"]
layout_mode = 0
offset_left = 12.0
offset_top = 14.0
offset_right = 264.0
offset_bottom = 28.0
theme = ExtResource("5")
text = "656456475454655"
placeholder_text = "656456475454655"
caret_blink = true
caret_blink_interval = 1.0

[node name="Change_Seed" type="Button" parent="WorldsCreationMenu/Label_Seed"]
layout_mode = 0
offset_left = 270.0
offset_top = 14.0
offset_right = 302.0
offset_bottom = 46.0
scale = Vector2(0.438, 0.438)
theme = ExtResource("5")
icon = ExtResource("4")
script = ExtResource("3")

[node name="Label_Mode" type="Label" parent="WorldsCreationMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 64.0
offset_top = 456.0
offset_right = 259.0
offset_bottom = 468.0
scale = Vector2(2, 2)
theme_override_colors/font_shadow_color = Color(0.196078, 0.196078, 0.196078, 1)
text = "menu_createworld_gamemode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChooseMode" type="OptionButton" parent="WorldsCreationMenu/Label_Mode"]
layout_mode = 0
offset_left = 14.0
offset_top = 16.0
offset_right = 266.0
offset_bottom = 30.5
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
theme = ExtResource("5")
clip_text = true

[node name="Description" type="Label" parent="WorldsCreationMenu/Label_Mode"]
texture_filter = 1
layout_mode = 0
offset_left = -184.0
offset_top = 31.0
offset_right = 1088.0
offset_bottom = 56.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Biome" type="Label" parent="WorldsCreationMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 684.0
offset_top = 456.0
offset_right = 879.0
offset_bottom = 467.0
scale = Vector2(2, 2)
theme = ExtResource("5")
theme_override_colors/font_shadow_color = Color(0.196078, 0.196078, 0.196078, 1)
text = "menu_createworld_biome"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChooseBiome" type="OptionButton" parent="WorldsCreationMenu/Label_Biome"]
layout_mode = 0
offset_left = 12.0
offset_top = 16.0
offset_right = 264.0
offset_bottom = 30.5
focus_mode = 0
theme = ExtResource("5")

[node name="Label_WaterLevel" type="Label" parent="WorldsCreationMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 64.0
offset_top = 556.0
offset_right = 274.0
offset_bottom = 568.0
scale = Vector2(2, 2)
theme = ExtResource("5")
theme_override_colors/font_shadow_color = Color(0.196078, 0.196078, 0.196078, 1)
text = "menu_createworld_water_level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChooseWaterLevel" type="HSlider" parent="WorldsCreationMenu/Label_WaterLevel"]
layout_mode = 0
offset_left = 12.0
offset_top = 15.0
offset_right = 520.0
offset_bottom = 47.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5")
min_value = -10.0
max_value = 128.0
value = 1.0

[node name="Value" type="Label" parent="WorldsCreationMenu/Label_WaterLevel"]
texture_filter = 1
layout_mode = 0
offset_left = 116.0
offset_top = 25.5
offset_right = 148.0
offset_bottom = 36.5
theme = ExtResource("5")
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinValue" type="Label" parent="WorldsCreationMenu/Label_WaterLevel"]
texture_filter = 1
layout_mode = 0
offset_left = -12.0
offset_top = 20.0
offset_right = 28.0
offset_bottom = 31.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5")
text = "-25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxValue" type="Label" parent="WorldsCreationMenu/Label_WaterLevel"]
texture_filter = 1
layout_mode = 0
offset_left = 270.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 31.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5")
text = "25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_SurfaceHeight" type="Label" parent="WorldsCreationMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 684.0
offset_top = 556.0
offset_right = 917.0
offset_bottom = 575.0
scale = Vector2(2, 2)
theme = ExtResource("5")
theme_override_colors/font_shadow_color = Color(0.196078, 0.196078, 0.196078, 1)
text = "menu_createworld_surface_height"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChooseSurfaceHeight" type="HSlider" parent="WorldsCreationMenu/Label_SurfaceHeight"]
layout_mode = 0
offset_left = 12.0
offset_top = 16.0
offset_right = 520.0
offset_bottom = 48.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5")
max_value = 360.0
value = 36.0

[node name="Value" type="Label" parent="WorldsCreationMenu/Label_SurfaceHeight"]
texture_filter = 1
layout_mode = 0
offset_left = 116.0
offset_top = 26.5
offset_right = 148.0
offset_bottom = 37.5
theme = ExtResource("5")
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinValue" type="Label" parent="WorldsCreationMenu/Label_SurfaceHeight"]
texture_filter = 1
layout_mode = 0
offset_left = -12.0
offset_top = 21.5
offset_right = 28.0
offset_bottom = 32.5
scale = Vector2(0.5, 0.5)
theme = ExtResource("5")
text = "-25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxValue" type="Label" parent="WorldsCreationMenu/Label_SurfaceHeight"]
texture_filter = 1
layout_mode = 0
offset_left = 270.0
offset_top = 21.5
offset_right = 310.0
offset_bottom = 32.5
scale = Vector2(0.5, 0.5)
theme = ExtResource("5")
text = "25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Thumbnail" type="Button" parent="WorldsCreationMenu"]
self_modulate = Color(0.196078, 0.196078, 0.196078, 1)
layout_mode = 0
offset_left = 300.0
offset_top = 136.0
offset_right = 364.0
offset_bottom = 200.0
toggle_mode = true

[node name="Sprite2D" type="Sprite2D" parent="WorldsCreationMenu/Thumbnail"]
position = Vector2(32, 32)
scale = Vector2(1.75, 1.75)
texture = ExtResource("2")

[node name="Label" type="Label" parent="WorldsCreationMenu/Thumbnail"]
texture_filter = 1
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(2, 2)
text = "MENU_CREATEWORLD_EDIT"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="PopupPanel" type="Panel" parent="WorldsCreationMenu"]
visible = false
layout_mode = 0
offset_left = 300.0
offset_top = 161.0
offset_right = 684.0
offset_bottom = 241.0
script = ExtResource("1")

[node name="ScrollContainer" type="ScrollContainer" parent="WorldsCreationMenu/PopupPanel"]
layout_mode = 0
offset_right = 392.0
offset_bottom = 80.0

[node name="VBoxContainer" type="VBoxContainer" parent="WorldsCreationMenu/PopupPanel/ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="WorldsCreationMenu/PopupPanel/ScrollContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="WorldsCreationMenu"]
texture_filter = 1
layout_mode = 0
offset_top = 32.0
offset_right = 320.0
offset_bottom = 44.0
scale = Vector2(4, 4)
text = "menu_createworld"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Effects" type="AudioStreamPlayer" parent="."]
volume_db = -80.0

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -77.447

[connection signal="mouse_entered" from="WorldsCreationMenu/Back" to="WorldsCreationMenu/Back" method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="WorldsCreationMenu/Back" to="WorldsCreationMenu/Back" method="_on_Back_mouse_exited"]
[connection signal="pressed" from="WorldsCreationMenu/Back" to="WorldsCreationMenu" method="_on_Back_pressed"]
[connection signal="mouse_entered" from="WorldsCreationMenu/CreateWorld" to="WorldsCreationMenu/CreateWorld" method="_on_CreateWorld_mouse_entered"]
[connection signal="mouse_exited" from="WorldsCreationMenu/CreateWorld" to="WorldsCreationMenu/CreateWorld" method="_on_CreateWorld_mouse_exited"]
[connection signal="pressed" from="WorldsCreationMenu/CreateWorld" to="WorldsCreationMenu" method="_on_CreateWorld_pressed"]
[connection signal="item_selected" from="WorldsCreationMenu/Label_Partymode/ChoosePartymode" to="WorldsCreationMenu" method="_on_ChoosePartymode_item_selected"]
[connection signal="mouse_entered" from="WorldsCreationMenu/Thumbnail" to="WorldsCreationMenu" method="_on_Thumbnail_mouse_entered"]
[connection signal="mouse_exited" from="WorldsCreationMenu/Thumbnail" to="WorldsCreationMenu" method="_on_Thumbnail_mouse_exited"]
